# poc-tpl

./: CMakeLists.txt  LICENSE  README.md
include/observable/: task.hpp
observable/: task.hpp
test/: main.cpp
